--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toolsplus/nx-forge",
-  "version": "0.0.0",
+  "version": "0.0.2-alpha.1",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
@@ -8,6 +8,12 @@
     "test": "nx test"
   },
   "private": true,
+  "keywords": [
+    "Atlassian",
+    "Forge",
+    "Nx",
+    "Monorepo"
+  ],
   "devDependencies": {
     "@nrwl/cli": "13.9.4",
     "@nrwl/devkit": "13.9.4",
@@ -17,7 +23,9 @@
     "@nrwl/linter": "13.9.4",
     "@nrwl/nx-plugin": "^13.9.4",
     "@nrwl/workspace": "13.9.4",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "27.0.2",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
@@ -31,6 +39,9 @@
     "typescript": "~4.5.2"
   },
   "dependencies": {
+    "@forge/manifest": "^3.4.0",
+    "fs-extra": "^10.0.1",
+    "js-yaml": "^4.1.0",
     "tslib": "^2.0.0"
   }
 }
