--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches:
+    branches-ignore:
       - main
   pull_request:
 
@@ -11,20 +11,17 @@ jobs:
     if: ${{ github.event_name != 'pull_request' }}
     steps:
       - uses: actions/checkout@v3
-        name: Checkout [main]
+        name: Checkout [${{ github.ref_name }}]
         with:
           fetch-depth: 0
       - uses: nrwl/nx-set-shas@v2
         name: Derive appropriate SHAs for base and head for `nx affected` commands
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: '16'
       - run: npm ci
-      - run: npx nx affected --target=format:check --parallel=2
-      - run: npx nx affected --target=lint --parallel=2
       - run: npx nx affected --target=build --parallel=2
       - run: npx nx affected --target=test --parallel=2
-      - run: npx nx affected --target=e2e --parallel=2
   pr:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' }}
@@ -39,5 +36,9 @@ jobs:
         with:
           node-version: '16'
       - run: npm ci
+      - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+      - run: npx nx affected --target=format:check --parallel=2
+      - run: npx nx affected --target=lint --parallel=2
       - run: npx nx affected --target=build --parallel=3
       - run: npx nx affected --target=test --parallel=2
+      - run: npx nx affected --target=e2e --parallel=2
