--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@toolsplus/nx-forge",
-  "version": "0.0.2-alpha.1",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "semantic-release": "semantic-release",
+    "prepare": "husky install"
   },
   "private": true,
   "keywords": [
@@ -15,6 +16,8 @@
     "Monorepo"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-angular": "^16.2.3",
     "@nrwl/cli": "13.9.4",
     "@nrwl/devkit": "13.9.4",
     "@nrwl/eslint-plugin-nx": "13.9.4",
@@ -31,9 +34,11 @@
     "@typescript-eslint/parser": "~5.10.0",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
     "nx": "13.9.4",
     "prettier": "^2.5.1",
+    "semantic-release": "^19.0.2",
     "ts-jest": "27.0.5",
     "tslib": "^2.0.0",
     "typescript": "~4.5.2"
@@ -43,5 +48,9 @@
     "fs-extra": "^10.0.1",
     "js-yaml": "^4.1.0",
     "tslib": "^2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/toolsplus/nx-forge.git"
   }
 }
