--- a/packages/forge/package.json
+++ b/packages/forge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toolsplus/nx-forge",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "description": "Atlassian Forge plugin for Nx",
   "main": "src/index.js",
   "generators": "./generators.json",
