--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
     "@nrwl/cli": "13.9.4",
-    "@nrwl/devkit": "13.9.4",
-    "@nrwl/eslint-plugin-nx": "13.9.4",
-    "@nrwl/jest": "13.9.4",
-    "@nrwl/js": "13.9.4",
-    "@nrwl/linter": "13.9.4",
-    "@nrwl/nx-plugin": "^13.9.4",
-    "@nrwl/workspace": "13.9.4",
+    "@nrwl/devkit": "14.0.3",
+    "@nrwl/eslint-plugin-nx": "14.0.3",
+    "@nrwl/jest": "14.0.3",
+    "@nrwl/js": "14.0.3",
+    "@nrwl/linter": "14.0.3",
+    "@nrwl/nx-plugin": "14.0.3",
+    "@nrwl/workspace": "14.0.3",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "27.0.2",
+    "@types/jest": "27.4.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.10.0",
-    "@typescript-eslint/parser": "~5.10.0",
-    "eslint": "~8.7.0",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.1.0",
     "husky": "^7.0.4",
-    "jest": "27.2.3",
-    "nx": "13.9.4",
+    "jest": "27.5.1",
+    "nx": "14.0.3",
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
-    "ts-jest": "27.0.5",
+    "ts-jest": "27.1.4",
     "tslib": "^2.0.0",
     "typescript": "~4.5.2"
   },
@@ -54,3 +54,4 @@
     "url": "https://github.com/toolsplus/nx-forge.git"
   }
 }
+
