--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
           fetch-depth: 0
       - uses: nrwl/nx-set-shas@v2
         name: Derive appropriate SHAs for base and head for `nx affected` commands
