fix(build): fix Forge app build to bundle dependencies
fix Forge app build to use Node Webpack build to bundle project dependencies

Closes: #11

--- a/packages/forge/package.json
+++ b/packages/forge/package.json
@@ -6,7 +6,7 @@
   "generators": "./generators.json",
   "executors": "./executors.json",
   "peerDependencies": {
-    "@nrwl/js": "^14.0.0",
+    "@nrwl/node": "^14.0.0",
     "@nrwl/workspace": "^14.0.0"
   }
 }
