--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nrwl/jest": "14.0.3",
     "@nrwl/js": "14.0.3",
     "@nrwl/linter": "14.0.3",
+    "@nrwl/node": "^14.0.5",
     "@nrwl/nx-plugin": "14.0.3",
     "@nrwl/workspace": "14.0.3",
     "@types/fs-extra": "^9.0.13",
@@ -54,4 +55,3 @@
     "url": "https://github.com/toolsplus/nx-forge.git"
   }
 }
-
