feat(nx): migrate to Nx 15
closes issue #24

--- a/e2e/forge-e2e/project.json
+++ b/e2e/forge-e2e/project.json
@@ -1,5 +1,6 @@
 {
-  "root": "e2e/forge-e2e",
+  "name": "forge-e2e",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "e2e/forge-e2e/src",
   "targets": {
