--- a/package.json
+++ b/package.json
@@ -19,30 +19,34 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
     "@nrwl/cli": "13.9.4",
-    "@nrwl/devkit": "14.0.3",
-    "@nrwl/eslint-plugin-nx": "14.0.3",
-    "@nrwl/jest": "14.0.3",
-    "@nrwl/js": "14.0.3",
-    "@nrwl/linter": "14.0.3",
-    "@nrwl/node": "^14.0.5",
-    "@nrwl/nx-plugin": "14.0.3",
-    "@nrwl/workspace": "14.0.3",
+    "@nrwl/devkit": "15.2.4",
+    "@nrwl/eslint-plugin-nx": "15.2.4",
+    "@nrwl/jest": "15.2.4",
+    "@nrwl/js": "15.2.4",
+    "@nrwl/linter": "15.2.4",
+    "@nrwl/node": "15.2.4",
+    "@nrwl/nx-plugin": "15.2.4",
+    "@nrwl/workspace": "15.2.4",
+    "@swc-node/register": "^1.4.2",
+    "@swc/core": "^1.2.173",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "27.4.1",
+    "@types/jest": "28.1.8",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
-    "eslint": "8.12.0",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "5.45.0",
+    "@typescript-eslint/parser": "5.45.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "husky": "^7.0.4",
-    "jest": "27.5.1",
-    "nx": "14.0.3",
-    "prettier": "^2.5.1",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "^29.3.1",
+    "nx": "15.2.4",
+    "prettier": "2.8.0",
     "semantic-release": "^19.0.2",
-    "ts-jest": "27.1.4",
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
     "tslib": "^2.0.0",
-    "typescript": "~4.5.2"
+    "typescript": "4.8.4"
   },
   "dependencies": {
     "@forge/manifest": "^4.4.1",
