--- a/package.json
+++ b/package.json
@@ -18,38 +18,44 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
-    "@nrwl/cli": "13.9.4",
-    "@nrwl/devkit": "15.3.3",
-    "@nrwl/eslint-plugin-nx": "15.3.3",
-    "@nrwl/jest": "15.3.3",
-    "@nrwl/js": "15.3.3",
-    "@nrwl/linter": "15.3.3",
-    "@nrwl/node": "15.3.3",
-    "@nrwl/nx-plugin": "15.3.3",
-    "@nrwl/workspace": "15.3.3",
+    "@nx/devkit": "16.0.0",
+    "@nx/eslint-plugin": "16.0.0",
+    "@nx/jest": "16.0.0",
+    "@nx/js": "16.0.0",
+    "@nx/linter": "16.0.0",
+    "@nx/node": "16.0.0",
+    "@nx/plugin": "16.0.0",
+    "@nx/webpack": "^16.0.0",
+    "@nx/workspace": "16.0.0",
     "@swc-node/register": "^1.4.2",
     "@swc/core": "^1.2.173",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "28.1.8",
+    "@types/jest": "29.4.4",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "5.45.0",
-    "@typescript-eslint/parser": "5.45.0",
+    "@typescript-eslint/eslint-plugin": "5.59.1",
+    "@typescript-eslint/parser": "5.59.1",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "husky": "^7.0.4",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "^29.3.1",
-    "nx": "15.3.3",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jest-environment-node": "^29.4.1",
+    "nx": "16.0.0",
     "prettier": "2.8.0",
     "semantic-release": "^19.0.2",
-    "ts-jest": "28.0.8",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "tslib": "^2.0.0",
-    "typescript": "4.8.4"
+    "tslib": "^2.3.0",
+    "typescript": "4.9.5"
   },
   "dependencies": {
+    "@fastify/autoload": "~5.7.1",
+    "@fastify/sensible": "~5.2.0",
     "@forge/manifest": "^4.4.1",
+    "axios": "^1.0.0",
+    "fastify": "~4.13.0",
+    "fastify-plugin": "~4.5.0",
     "fs-extra": "^10.0.1",
     "js-yaml": "^4.1.0",
     "tslib": "^2.0.0"
@@ -59,4 +65,3 @@
     "url": "https://github.com/toolsplus/nx-forge.git"
   }
 }
-
