--- a/packages/forge/package.json
+++ b/packages/forge/package.json
@@ -6,7 +6,7 @@
   "generators": "./generators.json",
   "executors": "./executors.json",
   "peerDependencies": {
-    "@nrwl/node": "^15.3.3",
-    "@nrwl/workspace": "^15.3.3"
+    "@nx/workspace": "^16.0.0",
+    "@nx/node": "^16.0.0"
   }
 }
