--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - name: 'Create E2E env file'
+        run: |
+          echo FORGE_EMAIL=${{ secrets.FORGE_EMAIL }} >> e2e/forge-e2e/.env
+          echo FORGE_API_TOKEN=${{ secrets.FORGE_API_TOKEN }} >> e2e/forge-e2e/.env
       - run: npm ci
       - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
       - run: npx nx affected --target=format:check --parallel=2
       - run: npx nx affected --target=lint --parallel=2
       - run: npx nx affected --target=build --parallel=3
       - run: npx nx affected --target=test --parallel=2
-      - run: npx nx affected --target=e2e --parallel=2
+      - run: npx nx affected --target=e2e --parallel=2 --no-silent
