--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,10 @@ jobs:
         name: Setup Node.js
         with:
           node-version: 'lts/*'
+      - name: 'Create E2E env file'
+        run: |
+          echo FORGE_EMAIL=${{ secrets.FORGE_EMAIL }} >> e2e/forge-e2e/.env
+          echo FORGE_API_TOKEN=${{ secrets.FORGE_API_TOKEN }} >> e2e/forge-e2e/.env
       - name: Install dependencies
         run: npm ci
       - name: Build and test
