--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
+    "@forge/cli": "^6.9.1",
     "@nx/devkit": "16.0.0",
     "@nx/eslint-plugin": "16.0.0",
     "@nx/jest": "16.0.0",
@@ -35,8 +36,11 @@
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
+    "dotenv": "^16.0.3",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.0.0",
     "husky": "^7.0.4",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
