feat: add install executor for forge apps
add a install executor that allows Forge apps to be installed with the Forge platform
update Forge application generator to generate install target using the new install executor

Closes: #29

--- a/e2e/forge-e2e/.env.example
+++ b/e2e/forge-e2e/.env.example
@@ -1,11 +1,16 @@
 # Some E2E tests require access to an Atlassian Developer account to
 # test using the Forge CLI and clean up after tests have run.
 #
-# Copy this file into a file called .env in the same directory and
-# update the variable values with the desired developer account
-#
-# If you need to generate an API token go to: https://id.atlassian.com/manage-profile/security/api-tokens
-#
+# Copy this file into a file called .env in the same directory and update the variable values with
+# the desired developer account, site and product.
+
 # https://developer.atlassian.com/platform/forge/getting-started/#using-environment-variables-to-login
 FORGE_EMAIL=email@example.com
+
+# If you need to generate an API token go to: https://id.atlassian.com/manage-profile/security/api-tokens
 FORGE_API_TOKEN=my-api-token
+
+ATLASSIAN_SITE_URL=my-jira-site.atlassian.net
+
+# jira, confluence, compass
+ATLASSIAN_PRODUCT=jira
