--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           echo FORGE_EMAIL=${{ secrets.FORGE_EMAIL }} >> e2e/forge-e2e/.env
           echo FORGE_API_TOKEN=${{ secrets.FORGE_API_TOKEN }} >> e2e/forge-e2e/.env
+          echo ATLASSIAN_PRODUCT=${{ vars.ATLASSIAN_PRODUCT }} >> e2e/forge-e2e/.env
+          echo ATLASSIAN_SITE_URL=${{ vars.ATLASSIAN_SITE_URL }} >> e2e/forge-e2e/.env
       - name: Install dependencies
         run: npm ci
       - name: Build and test
