--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zod": "^3.21.4"
   },
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
