--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nx/webpack": "17.2.8",
     "@nx/workspace": "17.2.8",
     "@swc-node/register": "1.6.8",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.103",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "29.4.4",
@@ -58,6 +59,7 @@
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
     "@forge/manifest": "^5.5.0",
+    "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
