--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "5.2.2",
+    "verdaccio": "^5.0.4",
     "zod": "^3.21.4"
   },
   "dependencies": {
@@ -70,5 +71,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/toolsplus/nx-forge.git"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
