--- a/packages/nx-forge/src/generators/application/files/tsconfig.app.json
+++ b/packages/nx-forge/src/generators/application/files/tsconfig.app.json
@@ -3,15 +3,12 @@
   "compilerOptions": {
     "outDir": "<%= offset %>dist/out-tsc",
     "module": "commonjs",
-    "target": "es2017",
     "sourceMap": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "lib": ["dom", "es2017"],
     "types": ["node"],
     "jsx": "react",
     "jsxFactory": "ForgeUI.createElement"
   },
-  "exclude": ["**/*.spec.ts", "**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
+  "include": ["src/**/*.ts"]
 }
