--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
     "@forge/cli": "^7.0.0",
-    "@nx/devkit": "17.2.8",
-    "@nx/eslint": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/node": "17.2.8",
-    "@nx/plugin": "17.2.8",
-    "@nx/webpack": "17.2.8",
-    "@nx/workspace": "17.2.8",
-    "@swc-node/register": "1.6.8",
+    "@nx/devkit": "18.0.6",
+    "@nx/eslint": "18.0.6",
+    "@nx/eslint-plugin": "18.0.6",
+    "@nx/jest": "18.0.6",
+    "@nx/js": "18.0.6",
+    "@nx/node": "18.0.6",
+    "@nx/plugin": "18.0.6",
+    "@nx/webpack": "18.0.6",
+    "@nx/workspace": "18.0.6",
+    "@swc-node/register": "1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.103",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "29.4.4",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "6.19.0",
-    "@typescript-eslint/parser": "6.19.0",
+    "@types/node": "18.19.21",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "dotenv": "^16.0.3",
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.1.0",
@@ -46,13 +46,13 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
-    "nx": "17.2.8",
+    "nx": "18.0.6",
     "prettier": "2.8.0",
     "semantic-release": "^19.0.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.2.2",
+    "typescript": "5.3.3",
     "verdaccio": "^5.0.4",
     "zod": "^3.21.4"
   },
@@ -61,7 +61,7 @@
     "@fastify/sensible": "~5.2.0",
     "@forge/manifest": "^5.5.3",
     "@swc/helpers": "~0.5.2",
-    "axios": "^1.0.0",
+    "axios": "1.6.7",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
     "fs-extra": "^10.0.1",
@@ -76,3 +76,4 @@
     "includedScripts": []
   }
 }
+
