--- a/packages/nx-forge/package.json
+++ b/packages/nx-forge/package.json
@@ -10,7 +10,7 @@
     "nx": "^18.0.0"
   },
   "dependencies": {
-    "@forge/manifest": "^5.5.0",
+    "@forge/manifest": "^6.1.0",
     "@nx/devkit": "18.0.6",
     "@nx/eslint": "18.0.6",
     "@nx/jest": "18.0.6",
@@ -18,6 +18,7 @@
     "@nx/webpack": "18.0.6",
     "fs-extra": "^10.0.1",
     "js-yaml": "^4.1.0",
+    "jsonata": "^2.0.4",
     "tslib": "^2.3.0"
   },
   "type": "commonjs",
