--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
     "@forge/cli": "^7.0.0",
-    "@nx/devkit": "18.0.6",
-    "@nx/eslint": "18.0.6",
-    "@nx/eslint-plugin": "18.0.6",
-    "@nx/jest": "18.0.6",
-    "@nx/js": "18.0.6",
-    "@nx/node": "18.0.6",
-    "@nx/plugin": "18.0.6",
-    "@nx/webpack": "18.0.6",
-    "@nx/workspace": "18.0.6",
+    "@nx/devkit": "19.0.2",
+    "@nx/eslint": "19.0.2",
+    "@nx/eslint-plugin": "19.0.2",
+    "@nx/jest": "19.0.2",
+    "@nx/js": "19.0.2",
+    "@nx/node": "19.0.2",
+    "@nx/plugin": "19.0.2",
+    "@nx/webpack": "19.0.2",
+    "@nx/workspace": "19.0.2",
     "@swc-node/register": "1.8.0",
-    "@swc/cli": "~0.1.62",
+    "@swc/cli": "0.3.12",
     "@swc/core": "1.3.103",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "29.4.4",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "18.19.21",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
     "dotenv": "^16.0.3",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
@@ -46,13 +46,13 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
-    "nx": "18.0.6",
+    "nx": "19.0.2",
     "prettier": "2.8.0",
     "semantic-release": "^19.0.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.3.3",
+    "typescript": "5.4.5",
     "verdaccio": "^5.0.4",
     "zod": "^3.21.4"
   },
@@ -77,3 +77,4 @@
     "includedScripts": []
   }
 }
+
