--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "nx-forge-workspace",
+  "name": "workspace",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "targets": {
     "local-registry": {
