--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
-    "@forge/cli": "^7.0.0",
-    "@nx/devkit": "19.0.2",
-    "@nx/eslint": "19.0.2",
-    "@nx/eslint-plugin": "19.0.2",
-    "@nx/jest": "19.0.2",
-    "@nx/js": "19.0.2",
-    "@nx/node": "19.0.2",
-    "@nx/plugin": "19.0.2",
-    "@nx/webpack": "19.0.2",
-    "@nx/workspace": "19.0.2",
-    "@swc-node/register": "1.8.0",
+    "@forge/cli": "^10.0.1",
+    "@nx/devkit": "19.2.0",
+    "@nx/eslint": "19.2.0",
+    "@nx/eslint-plugin": "19.2.0",
+    "@nx/jest": "19.2.0",
+    "@nx/js": "19.2.0",
+    "@nx/node": "19.2.0",
+    "@nx/plugin": "19.2.0",
+    "@nx/webpack": "19.2.0",
+    "@nx/workspace": "19.2.0",
+    "@swc-node/register": "1.9.1",
     "@swc/cli": "0.3.12",
-    "@swc/core": "1.3.103",
+    "@swc/core": "1.5.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "29.4.4",
     "@types/js-yaml": "^4.0.5",
@@ -46,7 +46,7 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
-    "nx": "19.0.2",
+    "nx": "19.2.0",
     "prettier": "2.8.0",
     "semantic-release": "^19.0.2",
     "ts-jest": "29.1.0",
@@ -59,8 +59,8 @@
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
-    "@forge/manifest": "^6.1.0",
-    "@swc/helpers": "~0.5.2",
+    "@forge/manifest": "^7.2.2",
+    "@swc/helpers": "0.5.11",
     "axios": "1.6.7",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
@@ -77,4 +77,3 @@
     "includedScripts": []
   }
 }
-
