--- a/packages/nx-forge/.eslintrc.json
+++ b/packages/nx-forge/.eslintrc.json
@@ -32,7 +32,9 @@
       ],
       "parser": "jsonc-eslint-parser",
       "rules": {
-        "@nx/dependency-checks": "error"
+        "@nx/dependency-checks": ["error", {
+          "ignoredDependencies": ["nx"]
+        }]
       }
     }
   ]
