--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
     "@forge/cli": "^10.13.0",
-    "@nx/devkit": "19.5.2",
-    "@nx/eslint": "19.5.2",
-    "@nx/eslint-plugin": "19.5.2",
-    "@nx/jest": "19.5.2",
-    "@nx/js": "19.5.2",
-    "@nx/node": "19.5.2",
-    "@nx/plugin": "19.5.2",
-    "@nx/webpack": "19.5.2",
-    "@nx/workspace": "19.5.2",
+    "@nx/devkit": "20.3.1",
+    "@nx/eslint": "20.3.1",
+    "@nx/eslint-plugin": "20.3.1",
+    "@nx/jest": "20.3.1",
+    "@nx/js": "20.3.1",
+    "@nx/node": "20.3.1",
+    "@nx/plugin": "20.3.1",
+    "@nx/webpack": "20.3.1",
+    "@nx/workspace": "20.3.1",
     "@swc-node/register": "1.9.1",
     "@swc/cli": "0.3.12",
     "@swc/core": "1.5.7",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "29.4.4",
+    "@types/jest": "29.5.14",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "18.19.21",
     "@typescript-eslint/eslint-plugin": "7.16.1",
@@ -43,16 +43,17 @@
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "husky": "^7.0.4",
-    "jest": "29.4.3",
-    "jest-environment-jsdom": "29.4.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "nx": "19.5.2",
+    "nx": "20.3.1",
     "prettier": "2.8.0",
     "semantic-release": "^19.0.2",
+    "strip-ansi": "^6.0.1",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.5.3",
+    "typescript": "5.6.3",
     "verdaccio": "^5.0.4",
     "zod": "^3.21.4"
   },
@@ -66,8 +67,7 @@
     "fastify-plugin": "~4.5.0",
     "fs-extra": "^10.0.1",
     "js-yaml": "^4.1.0",
-    "jsonata": "^2.0.5",
-    "tslib": "^2.0.0"
+    "jsonata": "^2.0.5"
   },
   "repository": {
     "type": "git",
