--- a/packages/nx-forge/.eslintrc.json
+++ b/packages/nx-forge/.eslintrc.json
@@ -4,7 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {
+        "no-constant-condition": ["error", { "checkLoops":  false}]
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
