--- a/packages/nx-forge/package.json
+++ b/packages/nx-forge/package.json
@@ -7,7 +7,7 @@
   "generators": "./generators.json",
   "executors": "./executors.json",
   "dependencies": {
-    "@forge/manifest": "^8.3.0",
+    "@forge/manifest": "^8.6.0-next.1",
     "@nx/devkit": "20.3.1",
     "@nx/eslint": "20.3.1",
     "@nx/jest": "20.3.1",
