fix(ci): fix CI release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,9 @@ on:
 
 permissions:
   id-token: write # to enable use of OIDC for trusted publishing and npm provenance
-  contents: read # to be able to publish a GitHub release
+  contents: write # to be able to publish a GitHub release
+  issues: write # to be able to comment on released issues
+  pull-requests: write # to be able to comment on released pull requests
 
 jobs:
   release:
