--- a/packages/nx-forge/package.json
+++ b/packages/nx-forge/package.json
@@ -2,6 +2,7 @@
   "name": "@toolsplus/nx-forge",
   "version": "0.0.0-e2e",
   "description": "Atlassian Forge plugin for Nx",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/toolsplus/nx-forge"
