feat(nx): update to Nx 22
BREAKING CHANGE: requires Nx 22

Closes #181

--- a/packages/nx-forge/project.json
+++ b/packages/nx-forge/project.json
@@ -2,6 +2,7 @@
   "name": "nx-forge",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/nx-forge/src",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
@@ -48,9 +49,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/packages/nx-forge"],
       "options": {
-        "jestConfig": "packages/nx-forge/jest.config.ts"
+        "jestConfig": "packages/nx-forge/jest.config.cts"
       }
     }
-  },
-  "tags": []
+  }
 }
