--- a/e2e/nx-forge-e2e/project.json
+++ b/e2e/nx-forge-e2e/project.json
@@ -3,16 +3,16 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "e2e/nx-forge-e2e/src",
+  "tags": [],
+  "implicitDependencies": ["nx-forge"],
   "targets": {
     "e2e": {
       "executor": "@nx/jest:jest",
       "options": {
-        "jestConfig": "e2e/nx-forge-e2e/jest.config.js",
+        "jestConfig": "e2e/nx-forge-e2e/jest.config.cjs",
         "runInBand": true
       },
       "dependsOn": ["nx-forge:build"]
     }
-  },
-  "tags": [],
-  "implicitDependencies": ["nx-forge"]
+  }
 }
