--- a/package.json
+++ b/package.json
@@ -19,52 +19,53 @@
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-angular": "^20.2.0",
     "@forge/cli": "^12.12.0",
-    "@nx/devkit": "20.3.1",
-    "@nx/eslint": "20.3.1",
-    "@nx/eslint-plugin": "20.3.1",
-    "@nx/jest": "20.3.1",
-    "@nx/js": "20.3.1",
-    "@nx/node": "20.3.1",
-    "@nx/plugin": "20.3.1",
-    "@nx/webpack": "20.3.1",
-    "@nx/workspace": "20.3.1",
-    "@swc-node/register": "1.9.1",
-    "@swc/cli": "0.3.12",
-    "@swc/core": "1.5.7",
+    "@nx/devkit": "22.3.3",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/jest": "22.3.3",
+    "@nx/js": "22.3.3",
+    "@nx/node": "22.3.3",
+    "@nx/plugin": "22.3.3",
+    "@nx/webpack": "22.3.3",
+    "@nx/workspace": "22.3.3",
+    "@swc-node/register": "1.11.1",
+    "@swc/cli": "0.7.9",
+    "@swc/core": "1.15.8",
+    "@swc/helpers": "0.5.17",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "29.5.14",
+    "@types/jest": "30.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "18.19.21",
-    "@typescript-eslint/eslint-plugin": "7.16.1",
-    "@typescript-eslint/parser": "7.16.1",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "dotenv": "^16.0.3",
     "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint-config-prettier": "10.1.8",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "husky": "^7.0.4",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
+    "jest": "30.0.5",
+    "jest-environment-jsdom": "30.0.5",
     "jest-environment-node": "^29.4.1",
-    "nx": "20.3.1",
+    "jest-util": "30.0.5",
+    "nx": "22.3.3",
     "prettier": "2.8.0",
     "semantic-release": "^25.0.2",
     "strip-ansi": "^6.0.1",
-    "ts-jest": "29.1.0",
+    "ts-jest": "29.4.6",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.6.3",
-    "verdaccio": "^5.0.4",
+    "typescript": "5.9.3",
+    "verdaccio": "6.2.4",
     "zod": "^3.21.4"
   },
   "dependencies": {
-    "@fastify/autoload": "~5.7.1",
-    "@fastify/sensible": "~5.2.0",
+    "@fastify/autoload": "6.0.3",
+    "@fastify/sensible": "6.0.4",
     "@forge/manifest": "^11.3.1",
-    "@swc/helpers": "0.5.11",
     "axios": "^1.13.2",
-    "fastify": "~4.13.0",
-    "fastify-plugin": "~4.5.0",
+    "fastify": "5.2.2",
+    "fastify-plugin": "5.0.1",
     "fs-extra": "^10.0.1",
     "js-yaml": "^4.1.1",
     "jsonata": "^2.0.5"
